# cabal-stackage

./: ChangeLog.md  README.md  cabal-stackage.cabal
.github/workflows/: build.yml
src/: Config.hs  Main.hs  Project.hs  Snapshot.hs
tests/: Tests.hs
