cabal-version:      2.2
name:               cabal-stackage
version:            0.1.0
synopsis:           Stack-like cabal-install wrapper using Stackage snapshots
description:
  cabal-stackage wraps cabal-install to provide a Stack-like build experience
  using Stackage snapshots. It fetches the latest minor snapshot config from
  stackage.org and imports it into your cabal project automatically.
license:            GPL-3.0-or-later
license-file:       COPYING
author:             Jens Petersen
maintainer:         juhpetersen@gmail.com
build-type:         Simple
-- extra-doc-files:    ChangeLog.md

executable cabal-stackage
  main-is:          Main.hs
  other-modules:
    Config
    Project
    Snapshot
  build-depends:
      base             < 5
    , aeson
    , bytestring
    , cached-json-file
    , containers
    , directory
    , filepath
    , http-conduit
    , simple-cmd       >= 0.2
    , simple-cmd-args
    , text
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
