cabal-version:      2.2
name:               cabal-stackage
version:            0.1
synopsis:           Stack-like cabal-install wrapper using Stackage snapshots
description:
  cabal-stackage wraps cabal-install to provide a Stack-like build experience
  using Stackage snapshots. It fetches the latest minor snapshot config from
  stackage.org and imports it into your cabal project automatically.
license:            GPL-3.0-or-later
license-file:       COPYING
author:             Jens Petersen
maintainer:         juhpetersen@gmail.com
build-type:         Simple
extra-doc-files:    ChangeLog.md

executable cabal-stackage
  main-is:          Main.hs
  other-modules:
    Config
    Paths_cabal_stackage
    Project
    Snapshot
  build-depends:
      base             < 5
    , bytestring
    , cached-json-file
    , containers
    , directory
    , extra
    , filepath
    , http-conduit
    , simple-cmd       >= 0.2
    , simple-cmd-args >= 0.1.8
    , text
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

test-suite cabal-stackage-tests
  type:             exitcode-stdio-1.0
  main-is:          Tests.hs
  hs-source-dirs:   tests, src
  other-modules:
    Config
    Project
    Snapshot
  build-depends:
      base             < 5
    , bytestring
    , cached-json-file
    , containers
    , directory
    , extra
    , filepath
    , http-conduit
    , simple-cmd       >= 0.2
    , simple-cmd-args  >= 0.1.8
    , tasty
    , tasty-hunit
    , text
  default-language: Haskell2010
  ghc-options:      -Wall
